GENIO: arm64: dts: mediatek: genio-510-evk: Add accdet support
The eint trigger level is low on the Genio 510-EVK. Setting the eint
trigger level in the DTS files.
Add the dai link to accdet.

Change-Id: I85f9b776bb1993a1b9001d40a4658873c5467720
Signed-off-by: Zoran Zhan <zoran.zhan@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/genio-510-evk.dts
+++ b/arch/arm64/boot/dts/mediatek/genio-510-evk.dts
@@ -1443,6 +1443,10 @@
 		codec-1 {
 			sound-dai = <&amic_codec>;
 		};
+
+		codec-2 {
+			sound-dai = <&accdet>;
+		};
 	};
 
 	dai-link-1 {
@@ -1474,6 +1478,10 @@
 			sound-dai = <&dmic_codec>;
 		};
 	};
+};
+
+&accdet {
+	mediatek,eint-level-pol = <IRQ_TYPE_LEVEL_LOW>;
 };
 
 &cam_vcore {
