GENIO: arm64: dts: mediatek: genio-700-evk: Add accdet support
The eint trigger level is low on the Genio 700-EVK. Setting the eint
trigger level in the DTS files.
Add the dai link to accdet.

Change-Id: Iec21cd0236717094a3ea690a22e1262905e11eb2
Signed-off-by: Zoran Zhan <zoran.zhan@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/genio-700-evk.dts
+++ b/arch/arm64/boot/dts/mediatek/genio-700-evk.dts
@@ -1403,6 +1403,10 @@
 		codec-1 {
 			sound-dai = <&amic_codec>;
 		};
+
+		codec-2 {
+			sound-dai = <&accdet>;
+		};
 	};
 
 	dai-link-1 {
@@ -1434,6 +1438,10 @@
 			sound-dai = <&dmic_codec>;
 		};
 	};
+};
+
+&accdet {
+	mediatek,eint-level-pol = <IRQ_TYPE_LEVEL_LOW>;
 };
 
 &cam_vcore {
