GENIO: arm64: dts: mediatek: genio-1200-evk: Add accdet support
The eint trigger level is high on the Genio 1200-EVK. Setting the
eint trigger level in the DTS files.
Add the dai link to accdet.

Change-Id: I30516694e8b87ddd17c865719d40edacede70be5
Signed-off-by: Zoran Zhan <zoran.zhan@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/genio-1200-evk.dts
+++ b/arch/arm64/boot/dts/mediatek/genio-1200-evk.dts
@@ -1286,6 +1286,10 @@
 		codec-0 {
 			sound-dai = <&pmic 0>;
 		};
+
+		codec-1 {
+			sound-dai = <&accdet>;
+		};
 	};
 
 	dai-link-1 {
@@ -1337,6 +1341,10 @@
 			sound-dai = <&dmic_codec>;
 		};
 	};
+};
+
+&accdet {
+	mediatek,eint-level-pol = <IRQ_TYPE_LEVEL_HIGH>;
 };
 
 &mfg0 {
