dt-bindings: phy: inphi: fix example
Fix the following in "make -j 8 DT_CHECKER_FLAGS=-m dt_binding_check DT_SCHEMA_FILES=phy/":

Error: Documentation/devicetree/bindings/phy/inphi,in112525.example.dts:19.9-16 syntax error
FATAL ERROR: Unable to parse input tree

Signed-off-by: Vladimir Oltean <vladimir.oltean@nxp.com>

--- a/Documentation/devicetree/bindings/phy/inphi,in112525.yaml
+++ b/Documentation/devicetree/bindings/phy/inphi,in112525.yaml
@@ -29,9 +29,9 @@ additionalProperties: false
 
 examples:
   - |
-
-    &emdio2 {
-      status = "okay";
+    mdio {
+      #address-cells = <1>;
+      #size-cells = <0>;
 
       inphi_retimer: retimer@0 {
         compatible = "inphi,in112525";
