dt-bindings: phy: inphi: remove word "binding" from title
Fix the following in "make -j 8 DT_CHECKER_FLAGS=-m dt_binding_check DT_SCHEMA_FILES=phy/":

Documentation/devicetree/bindings/phy/inphi,in112525.yaml: title:
'Inphi IN112525 Retimer PHY binding' should not be valid under {'pattern': '([Bb]inding| [Ss]chema)'}
        hint: Everything is a binding/schema, no need to say it. Describe what hardware the binding is for.
        from schema $id: http://devicetree.org/meta-schemas/base.yaml#

Signed-off-by: Vladimir Oltean <vladimir.oltean@nxp.com>

--- a/Documentation/devicetree/bindings/phy/inphi,in112525.yaml
+++ b/Documentation/devicetree/bindings/phy/inphi,in112525.yaml
@@ -4,7 +4,7 @@
 $id: http://devicetree.org/schemas/phy/inphi,in112525.yaml#
 $schema: http://devicetree.org/meta-schemas/core.yaml#
 
-title: Inphi IN112525 Retimer PHY binding
+title: Inphi IN112525 Retimer PHY
 
 maintainers:
   - Ioana Ciornei <ioana.ciornei@nxp.com>
