dt-bindings: phy: ds125df111: fix example
Fix the following in "make -j 8 DT_CHECKER_FLAGS=-m dt_binding_check DT_SCHEMA_FILES=phy/":

Error: Documentation/devicetree/bindings/phy/ti,ds125df111.example.dts:19.9-17 syntax error
FATAL ERROR: Unable to parse input tree

Signed-off-by: Vladimir Oltean <vladimir.oltean@nxp.com>

--- a/Documentation/devicetree/bindings/phy/ti,ds125df111.yaml
+++ b/Documentation/devicetree/bindings/phy/ti,ds125df111.yaml
@@ -29,9 +29,9 @@ additionalProperties: false
 
 examples:
   - |
-
-    &i2c_bus {
-      status = "okay";
+    i2c {
+      #address-cells = <1>;
+      #size-cells = <0>;
 
       ti_retimer: retimer@18 {
         compatible = "ti,ds125df111";
