--- a/Documentation/devicetree/bindings/phy/ti,ds125df111.yaml
+++ b/Documentation/devicetree/bindings/phy/ti,ds125df111.yaml
@@ -4,7 +4,7 @@
 $id: http://devicetree.org/schemas/phy/ti,ds125df111.yaml#
 $schema: http://devicetree.org/meta-schemas/core.yaml#
 
-title: TI DS125DF111 Retimer PHY binding
+title: TI DS125DF111 Retimer PHY
 
 maintainers:
   - Ioana Ciornei <ioana.ciornei@nxp.com>
