dt-bindings: fix path to imx93-power.h
Fix the following in "make -j 8 DT_CHECKER_FLAGS=-m dt_binding_check DT_SCHEMA_FILES=phy/":

Documentation/devicetree/bindings/phy/fsl,imx93-mipi-dphy.example.dts:19:18:
fatal error: 'dt-bindings/power/imx93-power.h' file not found
        #include <dt-bindings/power/imx93-power.h>
                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Signed-off-by: Vladimir Oltean <vladimir.oltean@nxp.com>

--- a/Documentation/devicetree/bindings/phy/fsl,imx93-mipi-dphy.yaml
+++ b/Documentation/devicetree/bindings/phy/fsl,imx93-mipi-dphy.yaml
@@ -72,7 +72,8 @@ additionalProperties: false
 examples:
   - |
     #include <dt-bindings/clock/imx93-clock.h>
-    #include <dt-bindings/power/imx93-power.h>
+    #include <dt-bindings/power/fsl,imx93-power.h>
+
     dphy: dphy {
         compatible = "fsl,imx93-mipi-dphy";
         clocks = <&clk IMX93_CLK_MIPI_PHY_CFG>, <&clk IMX93_CLK_24M>;
