--- a/sound/soc/mediatek/Kconfig
+++ b/sound/soc/mediatek/Kconfig
@@ -249,6 +249,7 @@ config SND_SOC_MT8395_EVK
 	tristate "ASoC Audio driver support for MT8395 with MT6359 codec"
 	depends on SND_SOC_MT8195 && MTK_PMIC_WRAP
 	select SND_SOC_MT6359
+	select SND_SOC_MT6359_ACCDET
 	select SND_SOC_DMIC
 	select SND_SOC_HDMI_CODEC
 	help
@@ -302,6 +303,7 @@ config SND_SOC_MT8390_EVK
 	depends on SND_SOC_MT8188 && MTK_PMIC_WRAP
 	select SND_SOC_HDMI_CODEC
 	select SND_SOC_MT6359
+	select SND_SOC_MT6359_ACCDET
 	select SND_SOC_DMIC
 	help
 	  This adds support for ASoC machine driver for MediaTek MT8188
